Placeholder for a method to let players know that user answered for the question. Implemented dind a new cheater button

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVER_ADDRESS=http://172.167.100.49:8081
+REACT_APP_SERVER_ADDRESS=http://192.168.100.22:8080
+#REACT_APP_SERVER_ADDRESS=http://172.167.100.49:8081
